# iot-waste-management

./: README.adoc
.github/: dependabot.yml
android/: .gitignore  README.adoc  build.gradle  build.gradle.kts  refreshVersions-extra-rules.txt  settings.gradle  settings.gradle.kts  versions.properties
android/app/: build.gradle  build.gradle.kts
android/app/src/androidTest/java/me/sanchithhegde/wastecollection/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/me/sanchithhegde/wastecollection/: DatabaseModule.kt  MainActivity.kt  MainApplication.kt  MainFragment.kt  MessageAdapter.kt  MessageViewModel.kt  SettingsActivity.kt  SettingsFragment.kt  WasteCollectionApplication.kt
android/app/src/main/java/me/sanchithhegde/wastecollection/adapters/: MessageAdapter.kt
android/app/src/main/java/me/sanchithhegde/wastecollection/data/: AppDatabase.kt  Message.kt  MessageDao.kt  MessageEntity.kt  MessageRepository.kt
android/app/src/main/java/me/sanchithhegde/wastecollection/database/: AppDatabase.kt
android/app/src/main/java/me/sanchithhegde/wastecollection/database/daos/: MessageDao.kt
android/app/src/main/java/me/sanchithhegde/wastecollection/database/entities/: Message.kt
android/app/src/main/java/me/sanchithhegde/wastecollection/di/: DatabaseModule.kt
android/app/src/main/java/me/sanchithhegde/wastecollection/notifications/: NotificationServiceExtension.kt
android/app/src/main/java/me/sanchithhegde/wastecollection/ui/: MainActivity.kt  MessagesFragment.kt  SettingsFragment.kt
android/app/src/main/java/me/sanchithhegde/wastecollection/utilities/: Constants.kt
android/app/src/main/java/me/sanchithhegde/wastecollection/viewmodels/: MessageViewModel.kt
android/app/src/main/kotlin/data/: AppDatabase.kt  Message.kt
android/app/src/main/kotlin/di/: DatabaseModule.kt
android/app/src/main/kotlin/notifications/: NotificationServiceExtension.kt
android/app/src/main/kotlin/ui/: MainActivity.kt  MessagesFragment.kt
android/app/src/main/res/drawable/: ic_round_settings.xml
android/app/src/main/res/layout/: activity_main.xml  activity_settings.xml  fragment_main.xml  fragment_messages.xml  fragment_settings.xml  item_message.xml  toolbar.xml
android/app/src/main/res/menu/: menu_main.xml
android/app/src/main/res/navigation/: nav_graph.xml
android/app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/main/res/xml/: root_preferences.xml
android/app/src/test/java/me/sanchithhegde/wastecollection/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
publisher/: .gitignore  Cargo.toml  Cross.toml  LICENSE-MIT  README.adoc  config.toml  openssl.sh
publisher/docker/: arm-unknown-linux-gnueabihf.Dockerfile
publisher/src/: config.rs  main.rs  mqtt_client.rs
subscriber/: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.adoc  config.toml  pyproject.toml
subscriber/iotwm/: __init__.py
subscriber/wmsub/: __init__.py  __main__.py  config.py  mqtt_client.py  utils.py
subscriber/wmsub/notifications/: __init__.py  onesignal.py  telegram.py
subscriber/wmsub/notifications/onesignal/: __init__.py
subscriber/wmsub/notifications/telegram/: __init__.py
