[package]
name    = "iot-waste-mgmt-pub"
version = "0.1.0"
authors = [ "Sanchith Hegde <sanchith.hegde01@gmail.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow            = "1.0.40"
directories       = "3.0.2"
futures           = "0.3.14"
log               = "0.4.14"
paho-mqtt         = "0.9.1"
pretty_env_logger = "0.4.0"
rppal             = "0.12.0"
serde             = "1.0.125"
serde_derive      = "1.0.125"
signal-hook       = "0.3.8"
signal-hook-tokio = { version = "0.3.0", features = [ "futures-v0_3" ] }
tokio             = { version = "1.5.0", features = [ "macros", "rt-multi-thread", "time" ] }
toml              = "0.5.8"

[[bin]]
name = "wmpub"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto           = "fat"
