[package]
name    = "iot-waste-mgmt-pub"
version = "0.1.0"
authors = [ "Sanchith Hegde <sanchith.hegde01@gmail.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow            = "1.0.56"
directories       = "4.0.1"
futures           = "0.3.21"
log               = "0.4.16"
paho-mqtt         = "0.10.0"
pretty_env_logger = "0.4.0"
rppal             = "0.13.1"
serde             = "1.0.136"
serde_derive      = "1.0.136"
signal-hook       = "0.3.13"
signal-hook-tokio = { version = "0.3.1", features = [ "futures-v0_3" ] }
tokio             = { version = "1.17.0", features = [ "macros", "rt-multi-thread", "time" ] }
toml              = "0.5.8"

[[bin]]
name = "wmpub"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto           = "fat"
